feat: generate openapi to add automatic entries
